_includes/v22.2/known-limitations/cdc.md
- Changefeeds cannot be [backed up](backup.html) or [restored](restore.html). [Tracking GitHub Issue](https://github.com/cockroachdb/cockroach/issues/73434)
- Changefeed target options are limited to tables and [column families](changefeeds-on-tables-with-column-families.html). [Tracking GitHub Issue](https://github.com/cockroachdb/cockroach/issues/73435)
- Using a [cloud storage sink](changefeed-sinks.html#cloud-storage-sink) only works with `JSON` and emits [newline-delimited json](http://ndjson.org) files. [Tracking GitHub Issue](https://github.com/cockroachdb/cockroach/issues/73432)
- Webhook sinks only support HTTPS. Use the [`insecure_tls_skip_verify`](create-changefeed.html#tls-skip-verify) parameter when testing to disable certificate verification; however, this still requires HTTPS and certificates. [Tracking GitHub Issue](https://github.com/cockroachdb/cockroach/issues/73431)
- [Webhook sinks](changefeed-sinks.html#webhook-sink) and [Google Cloud Pub/Sub sinks](changefeed-sinks.html#google-cloud-pub-sub) only have support for emitting `JSON`. [Tracking GitHub Issue](https://github.com/cockroachdb/cockroach/issues/73432)
- There is no concurrency configurability for [webhook sinks](changefeed-sinks.html#webhook-sink). [Tracking GitHub Issue](https://github.com/cockroachdb/cockroach/issues/73430)
- Using the [`split_column_families`](create-changefeed.html#split-column-families) and [`resolved`](create-changefeed.html#resolved-option) options on the same changefeed will cause an error when using the following [sinks](changefeed-sinks.html): Kafka and Google Cloud Pub/Sub. Instead, use the individual `FAMILY` keyword to specify column families when creating a changefeed. [Tracking GitHub Issue](https://github.com/cockroachdb/cockroach/issues/79452)
- There is no configuration for unordered messages for [Google Cloud Pub/Sub sinks](changefeed-sinks.html#google-cloud-pub-sub). You must specify the `region` parameter in the URI to maintain [ordering guarantees](changefeed-messages.html#ordering-guarantees). [Tracking GitHub Issue](https://github.com/cockroachdb/cockroach/issues/80884)
- If a changefeed with [`on_error='pause`](create-changefeed.html#on-error) is running when a watched table is [truncated](truncate.html), the changefeed will pause but will not be able to resume reads from that table. Using [`ALTER CHANGEFEED`](alter-changefeed.html) to drop the table from the changefeed and then [resuming the job](resume-job.html) will work, but you cannot add the same table to the changefeed again. Instead, you will need to [create a new changefeed](create-changefeed.html#start-a-new-changefeed-where-another-ended) for that table. [Tracking GitHub Issue](https://github.com/cockroachdb/cockroach/issues/98506)
